// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits passes \`categoryType\` prop\` 1`] = `
<TraitsCreation
  canCreateTraits={undefined}
  keyValuePairs={undefined}
  multiCreation={false}
  selectedDataSourceIds={
    Array [
      123,
    ]
  }
  signalType="ANALYTICS"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits passes \`categoryType\` prop\` 2`] = `
<TraitsCreation
  canCreateTraits={undefined}
  keyValuePairs={undefined}
  multiCreation={false}
  selectedDataSourceIds={
    Array [
      456,
    ]
  }
  signalType="ONBOARDED"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits passes \`categoryType\` prop\` 3`] = `
<TraitsCreation
  canCreateTraits={undefined}
  keyValuePairs={undefined}
  multiCreation={false}
  selectedDataSourceIds={
    Array [
      789,
    ]
  }
  signalType="REALTIME"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits passes \`categoryType\` prop\` 4`] = `
<TraitsCreation
  canCreateTraits={undefined}
  keyValuePairs={undefined}
  multiCreation={false}
  selectedDataSourceIds={
    Array [
      1919,
    ]
  }
  signalType="ALF"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderIncludedInTraits when signals are not included in traits passes \`categoryType\` prop\` 5`] = `
<TraitsCreation
  canCreateTraits={undefined}
  keyValuePairs={undefined}
  multiCreation={false}
  selectedDataSourceIds={null}
  signalType="ALL"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyName should render a single key-value pair's friendly name inside a div 1`] = `
<div>
  <div
    className="truncate"
    data-test="key-name-0"
  >
    Browser
  </div>
</div>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyName should render two key-value pairs on separate lines 1`] = `
<div>
  <div
    className="truncate"
    data-test="key-name-0"
  >
    Browser
  </div>
  <div
    className="truncate"
    data-test="key-name-1"
  >
    Browser Type
  </div>
</div>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyValuePairs should render one key-value pair as \`\${key}=\${value}\` inside a div 1`] = `
<div
  className="truncate keyValuePairs"
>
  <div
    className="truncate keyValuePairs"
    data-test="key-value-pair-0"
  >
    k=v
  </div>
</div>
`;

exports[`<SignalsTable /> component Rendering cells renderKeyValuePairs should render two key-value pairs on separate lines 1`] = `
<div
  className="truncate keyValuePairs"
>
  <div
    className="truncate keyValuePairs"
    data-test="key-value-pair-0"
  >
    k1=v1
  </div>
  <div
    className="truncate keyValuePairs"
    data-test="key-value-pair-1"
  >
    k2=v2
  </div>
</div>
`;

exports[`<SignalsTable /> component Rendering cells renderSignalType should render a valid signalType name inside a div 1`] = `
<div
  className="signalType"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderSignalType should render a valid signalType name inside a div 2`] = `
<div
  className="signalType"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderSignalType should render a valid signalType name inside a div 3`] = `
<div
  className="signalType"
/>
`;

exports[`<SignalsTable /> component Rendering cells renderSignalType should render a valid signalType name inside a div 4`] = `
<div
  className="signalType"
/>
`;

exports[`<SignalsTable /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignalsTable
    allowsSelection={true}
    onLoadMore={[Function]}
    results={
        Array [
            Object {
              "keyValuePairs": Array [
                Object {},
              ],
              "source": Object {
                "reportSuiteIds": Array [
                  123,
                ],
                "sourceType": "ANALYTICS",
              },
            },
            Object {
              "keyValuePairs": Array [
                Object {},
              ],
              "source": Object {
                "dataSourceIds": Array [
                  456,
                ],
                "sourceType": "ONBOARDED",
              },
            },
          ]
    }
    signalType="ALL"
    sortSearch={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowsSelection": true,
      "columns": Array [
        Object {
          "key": "keyValuePairs",
          "minWidth": 150,
          "sortable": true,
          "title": "Key-Value Pair",
        },
        Object {
          "key": "signalType",
          "title": "Signal Type",
          "width": 140,
        },
        Object {
          "key": "signalSource",
          "title": "Signal Source",
          "width": 180,
        },
        Object {
          "align": "right",
          "key": "totalCount",
          "sortable": true,
          "title": "Total Counts",
          "width": 150,
        },
        Object {
          "key": "includedInTraits",
          "title": "Included In Traits",
          "width": 155,
        },
      ],
      "dataTest": "signals-table",
      "isMaxSelectedRowsReached": undefined,
      "items": Array [
        Object {
          "includedInTraits": Object {
            "categoryType": undefined,
            "keyValuePairs": Array [
              Object {},
            ],
            "sids": undefined,
            "source": Object {
              "reportSuiteIds": Array [
                123,
              ],
              "sourceType": "ANALYTICS",
            },
          },
          "keyName": Array [
            "—",
          ],
          "keyValuePairs": Array [
            Object {},
          ],
          "signalSource": <div
            className="truncate sourceName"
            data-test="report-suite-name"
>
            123
</div>,
          "signalType": "Adobe Analytics",
          "source": Object {
            "reportSuiteIds": Array [
              123,
            ],
            "sourceType": "ANALYTICS",
          },
        },
        Object {
          "includedInTraits": Object {
            "categoryType": undefined,
            "keyValuePairs": Array [
              Object {},
            ],
            "sids": undefined,
            "source": Object {
              "dataSourceIds": Array [
                456,
              ],
              "sourceType": "ONBOARDED",
            },
          },
          "keyName": Array [
            "—",
          ],
          "keyValuePairs": Array [
            Object {},
          ],
          "signalSource": "456",
          "signalType": "Onboarded Records",
          "source": Object {
            "dataSourceIds": Array [
              456,
            ],
            "sourceType": "ONBOARDED",
          },
        },
      ],
      "onLoadMore": [Function],
      "onSelectionChange": [Function],
      "renderCell": [Function],
      "rowHeight": 48,
      "selectedRowIndexes": undefined,
      "sortSearch": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowsSelection": true,
        "columns": Array [
          Object {
            "key": "keyValuePairs",
            "minWidth": 150,
            "sortable": true,
            "title": "Key-Value Pair",
          },
          Object {
            "key": "signalType",
            "title": "Signal Type",
            "width": 140,
          },
          Object {
            "key": "signalSource",
            "title": "Signal Source",
            "width": 180,
          },
          Object {
            "align": "right",
            "key": "totalCount",
            "sortable": true,
            "title": "Total Counts",
            "width": 150,
          },
          Object {
            "key": "includedInTraits",
            "title": "Included In Traits",
            "width": 155,
          },
        ],
        "dataTest": "signals-table",
        "isMaxSelectedRowsReached": undefined,
        "items": Array [
          Object {
            "includedInTraits": Object {
              "categoryType": undefined,
              "keyValuePairs": Array [
                Object {},
              ],
              "sids": undefined,
              "source": Object {
                "reportSuiteIds": Array [
                  123,
                ],
                "sourceType": "ANALYTICS",
              },
            },
            "keyName": Array [
              "—",
            ],
            "keyValuePairs": Array [
              Object {},
            ],
            "signalSource": <div
              className="truncate sourceName"
              data-test="report-suite-name"
>
              123
</div>,
            "signalType": "Adobe Analytics",
            "source": Object {
              "reportSuiteIds": Array [
                123,
              ],
              "sourceType": "ANALYTICS",
            },
          },
          Object {
            "includedInTraits": Object {
              "categoryType": undefined,
              "keyValuePairs": Array [
                Object {},
              ],
              "sids": undefined,
              "source": Object {
                "dataSourceIds": Array [
                  456,
                ],
                "sourceType": "ONBOARDED",
              },
            },
            "keyName": Array [
              "—",
            ],
            "keyValuePairs": Array [
              Object {},
            ],
            "signalSource": "456",
            "signalType": "Onboarded Records",
            "source": Object {
              "dataSourceIds": Array [
                456,
              ],
              "sourceType": "ONBOARDED",
            },
          },
        ],
        "onLoadMore": [Function],
        "onSelectionChange": [Function],
        "renderCell": [Function],
        "rowHeight": 48,
        "selectedRowIndexes": undefined,
        "sortSearch": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
